# cognition

./: .env.example  pyproject.toml
app/: container.py  main.py
app/adapters/inbound/: generate_handler.py  rabbitmq_consumer.py
app/adapters/inbound/amqp/handlers/: cognition_handler.py  generate_handler.py
app/adapters/inbound/http/: agents_router.py  workflow_edges_router.py  workflow_nodes_router.py
app/adapters/outbound/: rabbitmq_publisher.py
app/adapters/outbound/postgres/: __init__.py  agent_repo.py  inference_log_repo.py
app/domain/entities/: agent.py  cognition.py  generate.py  model.py
app/domain/services/: llm_service.py
app/frameworks/langchain/utils/: graph_builder.py  template.py
app/frameworks/langchain/workflows/context_flow/: classes.py  main.py
app/infrastructure/config/: settings.py
app/infrastructure/messaging/: rabbitmq_connection.py
app/ports/inbound/: message_handler.py
app/ports/outbound/: agent_repository.py
app/workers/: cognition.py  generate.py
migrations/: 001_inference_logs.sql  002_inference_logs_token_details.sql  003_agents.sql  004_node_inference_logs.sql
